--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: little-core-labs/get-git-tag@v3.0.1
         id: tagName
         with:
-          tagRegex: "foobar-(.*)"  # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
+          tagRegex: "foobar-(-*)"  # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
           tagRegexGroup: 1 # Optional. Default is 1.
     
 
