--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,14 +19,15 @@ jobs:
     environment: production
 
     steps:
-      
+      - name: Run Script
+        id: script
+        run: |
+          echo "::set-output name=result::$(node -e 'const cadena = process.env.GITHUB_REF; console.log(cadena.substring(7, 9));')"
 
-      - uses: little-core-labs/get-git-tag@v3.0.1
-        id: tagName
-        with:
-          tagRegex: "foobar-(-*)"  # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
-          tagRegexGroup: 1 # Optional. Default is 1.
-    
+      - name: Print Result
+        run: |
+          result_value=${{ steps.script.outputs.result }}
+          echo "Result: $result_value"
 
       - name: Show information
         run: |
