--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,7 +22,16 @@ jobs:
       - name: Run Script
         id: script
         run: |
-          echo "::set-output name=result::$(node -e 'const cadena = process.env.GITHUB_REF; console.log(cadena.substring(7, 9));')"
+          echo "name=result::$(node -e 'const cadena = process.env.GITHUB_REF; console.log(cadena.substring(7, 9));')" >> $GITHUB_OUTPUT
+
+      - name: Set output
+        run: echo "::set-output name={name}::{value}"
+
+      - name: Set output
+        run: echo "{name}={value}" >> $GITHUB_OUTPUT
+
+      - name: Save state
+        run: echo "::save-state name={name}::{value}"
 
       - name: Print Result
         run: |
