--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,21 +22,14 @@ jobs:
       - name: Run Script
         id: script
         run: |
-          echo "name=result::$(node -e 'const cadena = process.env.GITHUB_REF; console.log(cadena.substring(7, 9));')" >> $GITHUB_OUTPUT
-
-      - name: Set output
-        run: echo "::set-output name={name}::{value}"
-
-      - name: Set output
-        run: echo "{name}={value}" >> $GITHUB_OUTPUT
-
-      - name: Save state
-        run: echo "::save-state name={name}::{value}"
+          const cadena = process.env.GITHUB_REF
+          const value = cadena.substring(7, 9))
+          echo "result=$value" >> $GITHUB_OUTPUT
 
       - name: Print Result
         run: |
           result_value=${{ steps.script.outputs.result }}
-          echo "Result: $result_value"
+          echo "Result:$result_value"
 
       - name: Show information
         run: |
