--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run Script
         id: script
         run: |
-          tag=$(echo "${{ github.ref }}" | sed 's/^v[0-9]\+\.[0-9]\+\.[0-9]\+-//')
+          tag=$(echo "${{ github.ref }}" | awk -F"-" '{print $NF}')
           echo "result=$tag" >> $GITHUB_ENV
 
       - name: Print Result
