--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,27 +13,28 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
-
-  CD:
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
+      
       - name: Run Script
         id: script
         run: |
           tag=$(echo "${{ github.ref }}" | awk -F"-" '{print $NF}')
-          echo "result=$tag" >> $GITHUB_ENV
-  
-      - name: Deploy to environment
-        uses: ./.github/workflows/CD.yml
-        with:
-          config-path: configure.js
-          environment: ${{ env.result }}
+          echo "result=$tag" >> $GITHUB_OUTPUT
+
+  CD:
+    needs: [build]
+    uses: ./.github/workflows/CD.yml
+    with:
+      config-path: configure.js
+      environment: ${{ needs.merge.outputs.result }}
+    secrets:
+      envPAT: ${{ secrets.envPAT }}
 
 
+      
 
       # - name: Configure AWS credentials
       #   uses: aws-actions/configure-aws-credentials@v1
