--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -29,7 +29,7 @@ jobs:
     uses: ./.github/workflows/CD.yml
     with:
       config-path: configure.js
-      environment: ${{ needs.merge.outputs.result }}
+      environment: ${{ needs.build.outputs.result }}
     secrets:
       envPAT: ${{ secrets.envPAT }}
 
