--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,4 +35,4 @@ jobs:
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
            github-token: ${{ secrets.GITHUB_TOKEN  }}
-           test-script: npm test
+           test-script: npm test:coverage
