--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "test:coverage": "jest"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
