--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,10 +29,10 @@ jobs:
         run: npm run build
       
       - name: Run tests
-        run: npm run test
+        run: npm run test:coverage
       
       - name: Coverage
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
            github-token: ${{ secrets.GITHUB_TOKEN  }}
-           test-script: npm test:coverage
+           test-script: npm test
