--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       
       - name: Run tests
-        run: npm run test:coverage
+        run: npm run test
       
       - name: Coverage
         uses: ArtiomTr/jest-coverage-report-action@v2
