--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll",
-    "test:coverage": "jest"
+    "test": "jest"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
